radarr/radarr-service.yml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: home-media
  # labels:
    # app: sonarr
    # kubernetes.io/name: "sonarr"
spec:
  selector:
    app: radarr
  ports:
  - port: 80
    targetPort: 7878
    protocol: TCP
  type: LoadBalancer
