radarr/radarr-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  # annotations:
    # kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: radarr.momochan.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: radarr
            port:
              number: 80
        pathType: Prefix
